add server ssl setup env vars

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,6 +23,9 @@ ENV IRODS_PKG_VERSION=4.2.8-1 \
     IRODS_CONTROL_PLANE_KEY=TEMPORARY__32byte_ctrl_plane_key \
     IRODS_DATA_PORT_RANGE_START=20000 \
     IRODS_DATA_PORT_RANGE_END=20199 \
+    IRODS_SSL_CERTIFICATE_CHAIN_FILE=/etc/irods/server.crt \
+    IRODS_SSL_CERTIFICATE_KEY_FILE=/etc/irods/server.key \
+    IRODS_SSL_DH_PARAMS_FILE=/etc/irods/dhparams.pem \
     IRODS_SSL_VERIFY_SERVER=none \
     IRODS_PASSWORD_SALT=tempsalt \
     IRODS_SSL_CA_CERT_PATH= \
