fix default IRODS_ODBC_DRIVER value

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,7 +35,7 @@ ENV IRODS_PKG_VERSION=4.2.11-1 \
     IRODS_CLIENT_SERVER_POLICY=CS_NEG_REFUSE \
     IRODS_RESOURCE_DIRECTORY=/data/Vault \
     IRODS_DEFAULT_HASH_SCHEME="SHA256" \
-    IRODS_ODBC_DRIVER="PostgreSQL" \
+    IRODS_ODBC_DRIVER="PostgreSQL Unicode" \
     IRODS_ICAT_DBSERVER=postgres \
     IRODS_ICAT_DBPORT=5432 \
     IRODS_ICAT_DBNAME=ICAT \
