add perm enforcement for irods.log (#34)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -104,6 +104,8 @@ COPY files/irods.logrotate /etc/logrotate.d/irods
 RUN chmod 0644 /etc/logrotate.d/irods
 RUN mkdir -p /var/log/irods
 RUN chown syslog:adm /var/log/irods
+RUN touch /var/log/irods/irods.log
+RUN chown syslog:adm /var/log/irods/irods.log
 
 # Create iRODS vault dir
 RUN mkdir -p $IRODS_RESOURCE_DIRECTORY
