fix sssd package discovery (#31)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -126,4 +126,5 @@ CMD ["irods-start"]
 FROM main AS sssd
 
 ARG DEBIAN_FRONTEND=noninteractive
+RUN apt-get update
 RUN apt-get install -y sssd sssd-ldap sssd-tools strace
