add IRODS_DEFAULT_RESOURCE_NAME env var (#17)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,6 +35,7 @@ ENV IRODS_PKG_VERSION=$IRODS_PKG_VERSION \
     IRODS_SSL_CA_CERT_PATH= \
     IRODS_CLIENT_SERVER_NEGOTIATION=request_server_negotiation \
     IRODS_CLIENT_SERVER_POLICY=CS_NEG_REFUSE \
+    IRODS_DEFAULT_RESOURCE_NAME=demoResc \
     IRODS_RESOURCE_DIRECTORY=/data/Vault \
     IRODS_DEFAULT_HASH_SCHEME="SHA256" \
     IRODS_ODBC_DRIVER="PostgreSQL Unicode" \
